fix: better use of whitespace

--- a/styles/06-components/BookCard.css
+++ b/styles/06-components/BookCard.css
@@ -65,7 +65,6 @@ StyleGuide 6.3
   margin: 0;
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #f0f0f0;
   position: relative;
 }
 /* .BookCard:first-child {
@@ -117,7 +116,7 @@ StyleGuide 6.3
 .kss-style .BookCard-title {
   margin: 0;
   padding: 0;
-  font-weight: 600;
+  font-weight: 750;
   font-size: 1rem;
   line-height: 1;
 }
@@ -185,7 +184,7 @@ StyleGuide 6.3
   line-height: 1;
   font-feature-settings: 'pnum' on;
   font-variant-numeric: proportional-nums;
-  font-weight: 750;
+  font-weight: 600;
   letter-spacing: -1px;
   font-size: 1.25rem;
   text-align: right;
@@ -241,7 +240,6 @@ StyleGuide 6.3
     width: 100%;
     max-height: none;
     object-fit: contain;
-    background-color: #ccc;
   }
   /* .BookCard-session {
     display: grid;
