--- a/styles/06-components/Library.css
+++ b/styles/06-components/Library.css
@@ -8,6 +8,11 @@
   grid-template-rows: 2rem 1fr;
 }
 
+.Library-books {
+  display: grid;
+  grid-gap: 1rem;
+}
+
 @media (min-width: 820px) {
   .Library-books {
     display: grid;
