--- a/styles/06-components/Menu.css
+++ b/styles/06-components/Menu.css
@@ -27,7 +27,6 @@ StyleGuide 6.Menu
   background-color: transparent;
   padding: 0;
   margin: 0;
-  border-bottom: 1px solid #f0f0f0;
 }
 .Menu-list {
   display: flex;
